# artifactory

./: .env.example  .gitignore  README.md  alembic.ini  code_quality-analysis.md  napkin.md  package.json  pyproject.toml  requirements.txt
.ralph/: ralph-history.json  ralph-loop.state.json
artifactforge/: __init__.py  config.py
artifactforge-design/: MCRS_pipeline_spec_detailed.md  README.md  architecture-design.md  bootstrap-prompt.md  database-schema.md  docker-compose.yml  pyproject.toml
artifactforge/agents/: __init__.py  adversarial_reviewer.py  analyst.py  draft_writer.py  evidence_ledger.py  final_arbiter.py  intent_architect.py  llm_client.py  llm_gateway.py  output_strategist.py  polisher.py  research_lead.py  verifier.py  visual_designer.py  visual_generator.py  visual_reviewer.py
artifactforge/cli/: __init__.py  main.py
artifactforge/coordinator/: __init__.py  artifacts.py  contracts.py  mcrs_graph.py  nodes.py  state.py  validation.py
artifactforge/db/: __init__.py  base.py  models.py  models_checkpoints.py  models_executions.py  models_learnings.py  models_metrics.py  models_prompts.py  models_quality.py  models_schemas.py  persistence.py  session.py
artifactforge/observability/: middleware.py
artifactforge/schemas/: __init__.py  simple_report.py
artifactforge/tools/: __init__.py  (+1 more)
migrations/: env.py
outputs/: 2026-03-28-chincoteague-indian-takeout-market-report.md  Chincoteague_Indian_Takeout_Market_Report.md  MCRS_implementation_plan.md  opencode-config.yaml
scripts/: README.md  diagnose.py  evaluate.py  md2pdf.py  pdf_to_markdown.py
(+50 files in other folders)
